@@ -1,8 +1,10 @@
 VDR Plugin 'streamdev' Revision History
 ---------------------------------------
  
+- fixed problems related to VTP filter streaming like ringbuffer overflows,
+  stuttering or aborting video stream (thanks to Toerless Eckert)
 - added Polish translation (thanks to Tomasz Maciej Nowak)
-- converted suspend.dat into proper PES format (thanks to te36)
+- converted suspend.dat into proper PES format (thanks to Toerless Eckert)
 - implemented GetCurrentlyTunedTransponder() on client (thanks to Martin1234)
 - added service call returning the number of clients (suggested by Martin1234)
 - added SVDRP commands to list and disconnect clients (thanks to Guy Martin)
